Pygments changelog
==================

Version 0.6
-----------
(released Nov XX, 2006)

- Encoding support added: all processing is now done with Unicode
  strings, input and output are converted from and to byte strings.

- Some improvements in the C(++) lexers handling comments and line
  continuations.


Version 0.5.1
-------------
(released Oct 30, 2006)

- Fix traceback in ``pygmentize -L`` (thanks to Piotr Ozarowski).


Version 0.5
-----------
(released Oct 30, 2006)

- Initial public release.